[package]
name = "cjk-unicode-pdf-to-xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
regex = "1.9.1"
once_cell = "1.18.0"
itertools = "0.11.0"
duplicate = "1.0.0"
resvg = "0.35.0"
image = "0.24.6"
rust_xlsxwriter = "0.44.0"
clap = { version = "4.3.21", features = ["derive"] }
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
