[package]
name = "cjk-unicode-pdf-to-xlsx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.9.3"
once_cell = "1.18.0"
itertools = "0.11.0"
duplicate = "1.0.0"
resvg = "0.35.0"
image = "0.24.7"
rust_xlsxwriter = "0.45.0"
pyo3 = { version = "0.19.2", features = ["auto-initialize"] }
zip = { version = "0.6.6", features = ["deflate"] }
# clap = { version = "4.3.21", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
